# LineDog-Rest

./: .gitignore  AGENTS.md  PRD.md  README.md
assistant_backend/: .env.example  learning.db.backup_20260509  pyproject.toml
assistant_backend/scripts/: com.maldaze.backend.plist  com.maldaze.morning-agent.plist  install_launchagents.sh
assistant_backend/src/: config.py  main.py
assistant_backend/src/agents/: conversational_agent.py  ingestion_agent.py  morning_agent.py  weekly_review_agent.py
assistant_backend/src/db/: connection.py  init.py  plan_md.py  queries.py  (+1 more)
assistant_backend/tests/: conftest.py  test_ingestion_url_validation.py  test_integration.py  test_morning_agent.py  test_parent_monitor.py  test_resource_management.py  test_study_add_initiate_adapter.py  test_study_intake_router.py  test_study_plan_adjustment_deadline.py  test_study_plan_adjustment_delete.py  test_study_plan_adjustment_dialogue_apply.py  test_study_plan_adjustment_dialogue_preview.py  test_study_plan_adjustment_insert.py  test_study_plan_adjustment_move.py  test_study_plan_adjustment_rest_days.py  test_study_plan_adjustment_rollover.py  test_study_plan_adjustment_schema.py  test_study_plan_clarification.py  test_study_plan_compiler.py  test_study_plan_decomposition.py  test_study_plan_lifecycle.py  test_study_plan_router.py  test_study_plan_scheduling.py  test_study_smart_mode_briefing.py  test_study_smart_mode_proposals.py  test_study_smart_mode_settings.py  test_study_views_calendar.py  test_study_views_completion.py  test_study_views_project_overview.py  test_study_views_today.py
(+1066 files in other folders)
